Avoid ugly overflow

--- a/css/list_organizations.less
+++ b/css/list_organizations.less
@@ -25,6 +25,13 @@
         height: 25px;
         max-height: 25px;
 
+        &-field {
+            height: 100%;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+
         &-name {
             .make-sm-column(5);
         }
